bk_ida/gccida/g0/copy_most_rtx
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_most_rtx/src/emit-rtl.c:2894:21: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
copy = rtx_alloc( ( rtx_code)*( _WORD *)orig); 
                    ^~~~~~~~
                    rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_most_rtx/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_most_rtx/src/emit-rtl.c:2894:30: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
copy = rtx_alloc( ( rtx_code)*( _WORD *)orig); 
                  ~~~~~~~~~~~^~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_most_rtx/src/emit-rtl.c:2918:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v4.rtwint = ( __int64)copy->fld[i]; 
                      ^~~~~~~~~~~~
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_most_rtx/src/obj/emit-rtl.o] Error 1
